--- a/ExamensArbete0.1/ExamensArbete0.1/Share/commonCss.cshtml
+++ b/ExamensArbete0.1/ExamensArbete0.1/Share/commonCss.cshtml
@@ -1,3 +1,3 @@
-﻿<link href="~/Content/bootstrap-grid.css" rel="stylesheet" />
+﻿<link href="~/Content/bootstrap.css" rel="stylesheet" />
+<link href="~/Content/bootstrap-grid.css" rel="stylesheet" />
 <link href="~/Content/bootstrap-reboot.css" rel="stylesheet" />
-<link href="~/Content/bootstrap.css" rel="stylesheet" />
